# time-app

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: app.rs  main.rs  time-app.manifest  ui.rs
