[package]
name = "time-app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.22"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[package.metadata.bundle]
name = "Time App"
identifier = "com.yourname.timeapp"
icon = ["path/to/icon.png"]
version = "0.1.0"

[build-dependencies]
embed-resource = "2.4"