[package]
name = "time-app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.22"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[package.metadata.bundle]
name = "Time App"
identifier = "com.sanyok12345.timeapp"
version = "0.2.1"

[build-dependencies]
embed-resource = "2.4"